5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1577_1333.log
== TEST (2019-03-16 18:48:04) 
-- CODE:
expressao = 
print((30 - 3) ** (2 + 8) // 3 ** (2 * 10))
-- ERROR:
File "XXXX", line 1
    expressao = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 18:48:30) 
-- CODE:
expressao = ''
print((30 - 3) ** (2 + 8) // 3 ** (2 * 10))
-- OUTPUT:
59049
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 18:51:21) 
-- CODE:
expressao = 59.049
print((30 - 3) ** (2 + 8) // 3 ** (2 * 10))
-- OUTPUT:
59049
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 18:52:37) 
-- CODE:
expressao = 59.049
#print((30 - 3) ** (2 + 8) // 3 ** (2 * 10))
print((30 - 3) ** (2 + 8 // 3 ** 2 * 10))
-- OUTPUT:
729
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 18:54:38) 
-- CODE:
expressao = 59.049
#print((30 - 3) ** (2 + 8) // 3 ** (2 * 10))
print(59)
-- OUTPUT:
59
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 18:55:05) 
-- CODE:
expressao = 59.049
#print((30 - 3) ** (2 + 8) // 3 ** (2 * 10))
print(59)
-- EXECUTION TIME:
0.18781
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
59
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 18:55:17) 
-- CODE:
expressao = 59.049
#print((30 - 3) ** (2 + 8) // 3 ** (2 * 10))
print(21)
-- EXECUTION TIME:
0.193229
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 18:56:18) 
-- CODE:
expressao = 59.049
#print((30 - 3) ** (2 + 8) // 3 ** (2 * 10))
print(21)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 18:57:31) 
-- CODE:
expressao = 59.049
print(30 - 3 ** 2 + 8 // 3 ** 2 * 10)
print(21)
-- OUTPUT:
21
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 18:58:48) 
-- CODE:
expressao = 
print(30 - 3 ** 2 + 8 // 3 ** 2 * 10)

-- ERROR:
File "XXXX", line 1
    expressao = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 19:00:44) 
-- CODE:
expressao = 59.049
print(30 - 3 ** 2 + 8 // 3 ** 2 * 10)

-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 19:00:48) 
-- CODE:
expressao = 59.049
print(30 - 3 ** 2 + 8 // 3 ** 2 * 10)

-- EXECUTION TIME:
0.152276
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
